Survive non-numeric Zipcode